@@ -952,16 +952,21 @@ BOOST_PYTHON_MODULE(_camfr)
 
   class_<Material, bases<BaseMaterial> >
     ("Material", init<const Complex&, optional<const Complex&> >())
-    .def("__call__", material_to_term)
-    .def("n",        &Material::n)
-    .def("set_n",    &Material::set_n)
-    .def("epsr",     material_epsr)
-    .def("mur",      material_mur)
-    .def("set_mur",  &Material::set_mur)
-    .def("eps",      &Material::eps)
-    .def("mu",       &Material::mu)
-    .def("gain",     &Material::gain)
-    .def("__repr__", &Material::repr)
+    .def("__call__",     material_to_term)
+    .def("epsr",         material_epsr)
+    .def("mur",          material_mur)
+    .def("eps",          &Material::eps)
+    .def("mu",           &Material::mu)
+    .def("n",            &Material::n)
+    .def("etar",         &Material::etar)
+    .def("eta",          &Material::eta)
+    .def("set_epsr_mur", &Material::set_epsr_mur)    
+    .def("set_epsr",     &Material::set_epsr)    
+    .def("set_mur",      &Material::set_mur)
+    .def("set_n",        &Material::set_n)
+    .def("set_etar",     &Material::set_etar)
+    .def("gain",         &Material::gain)
+    .def("__repr__",     &Material::repr)
     ;
 
   // Wrap BiaxialMaterial.
@@ -994,9 +999,12 @@ BOOST_PYTHON_MODULE(_camfr)
   class_<Waveguide, boost::noncopyable>("Waveguide", no_init)
     .def("core",     &Waveguide::get_core,
          return_value_policy<reference_existing_object>())
+    .def("epsr",     &Waveguide::epsr_at)
+    .def("mur",      &Waveguide::mur_at)
     .def("eps",      &Waveguide::eps_at)
     .def("mu",       &Waveguide::mu_at)
     .def("n",        &Waveguide::n_at)
+    .def("etar",     &Waveguide::etar_at)
     .def("N",        &Waveguide::N)
     .def("mode",     waveguide_get_mode,
          return_value_policy<reference_existing_object>())
